[+] Complete the function output / Pass testcase 1 ~ 5

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -40,6 +40,8 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "iomanip": "cpp",
+        "ctime": "cpp"
     }
 }
