[+]<Bonus> Modify Parser.y for Destruct

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CC      = g++
 LEX     = flex
 YACC    = bison
-CFLAGS  = -Wall -std=c++11
+CFLAGS  = -Wall -std=c++11 -g
 LIBS    = -lfl -ly
 INCLUDE = -Iinclude
 
